# beebotos

./: .gitignore  CLAUDE.md  Cargo.toml
apps/gateway/: Cargo.toml  build.rs
apps/gateway/benches/: gateway_benchmarks.rs
apps/gateway/examples/: test_db_url.rs
apps/gateway/src/: auth.rs  capability.rs  color_theme.rs  config.rs  config_center_integration.rs  config_wizard.rs  error.rs  health.rs  main.rs  message_bus.rs  models.rs  state_machine.rs  telemetry.rs
apps/gateway/src/clients/: beehub.rs  clawhub.rs  mod.rs
apps/gateway/src/grpc/: skills.rs
apps/gateway/src/handlers/: common.rs
apps/gateway/src/handlers/http/: admin_config.rs  agent_logs.rs  agents.rs  agents_v2.rs  auth.rs  browser.rs  chain.rs  chain_v2.rs  channels.rs  compositions.rs  llm_admin.rs  llm_config.rs  llm_metrics.rs  mod.rs  skills.rs  state_machine.rs  task_monitor.rs  treasury.rs  user_channels.rs  user_settings.rs  webchat.rs  webhooks.rs  workflows.rs
apps/gateway/src/handlers/websocket/: mod.rs
apps/gateway/src/services/: agent_resolver.rs  agent_runtime_manager.rs  agent_service.rs  auth_service.rs  cache_warmer.rs  chain_event_parser.rs  chain_events.rs  chain_service.rs  chain_signer.rs  chain_transaction.rs  dao_service.rs  encryption_service.rs  identity_cache.rs  identity_service.rs  llm_provider_db.rs  llm_service.rs  message_processor.rs  mod.rs  multichain_config.rs  state_machine_service.rs  task_monitor.rs  wallet_service.rs  webchat_service.rs
apps/gateway/tests/: integration_tests.rs
apps/gateway/tests/common/: mod.rs
apps/web/: Cargo.toml  Trunk.toml  index.html  start-server.sh
apps/web/src/: i18n.rs  lib.rs
apps/web/src/api/: browser.rs  client.rs  gateway.rs  llm_provider_service.rs  mod.rs  services.rs  webchat.rs
apps/web/src/browser/: automation.rs  cdp.rs  debugger.rs  mod.rs  sandbox.rs
apps/web/src/components/: charts.rs  chat_search.rs  command_palette.rs  error_boundary.rs  footer.rs  guard.rs  info_item.rs  loading.rs  mod.rs  modal.rs  nav.rs  pagination.rs  security.rs  sidebar.rs  star_rating.rs  topbar.rs
apps/web/src/components/browser/: browser_viewport.rs  debug_console.rs  mod.rs  profile_card.rs  profile_list.rs  sandbox_card.rs  sandbox_list.rs
apps/web/src/components/webchat/: message_input.rs  message_item.rs  (+6 more)
apps/web/src/error/: mod.rs
apps/web/src/gateway/: auth.rs  mod.rs  scopes.rs  websocket.rs
apps/web/src/pages/: agent_detail.rs  agents.rs  browser.rs  channels.rs  dao.rs  home.rs  llm_config.rs  llm_provider_modals.rs  llm_providers.rs  llm_settings.rs  login.rs  mod.rs  not_found.rs  register.rs  settings.rs  setup.rs  skill_instances.rs  skills.rs  treasury.rs  webchat.rs  workflow_detail.rs  workflows.rs
apps/web/src/server/: config.rs  logger.rs  mod.rs  proxy.rs
apps/web/src/state/: agent.rs  app.rs  auth.rs  browser.rs  dao.rs  gateway.rs  mod.rs  notification.rs  webchat.rs  wizard.rs
apps/web/src/utils/: dom.rs  mod.rs  theme.rs
apps/web/src/webchat/: chat.rs  mobile.rs  mod.rs  session.rs  sidebar.rs
apps/web/style/: components.css  main.css
crates/agents/: Cargo.toml
crates/agents/examples/: agent_planning_example.rs  android_device_test.rs  douyin_automation.rs  planning_advanced.rs  planning_example.rs
crates/agents/src/: agent_impl.rs  channel_registry.rs  deduplicator.rs  error.rs  error_integration.rs  kernel_integration.rs  lib.rs  message_bus.rs  performance_optimizations.rs  task.rs  tests_integration.rs
crates/agents/src/a2a/: acp20_protocol.rs  discovery.rs  message.rs  mod.rs  security.rs
crates/agents/src/communication/: agent_channel.rs  channel_instance_manager.rs  message_history.rs  message_router_v2.rs  mod.rs  offline_message_store.rs  offline_message_store_sqlite.rs  user_channel.rs
crates/agents/src/context/: assembler.rs
crates/agents/src/device/: android.rs  ios.rs  mod.rs  node.rs
crates/agents/src/events/: mod.rs  types.rs
crates/agents/src/llm/: adapter.rs  client.rs  failover.rs  http_client.rs  mod.rs  traits.rs  types.rs
crates/agents/src/mcp/: client.rs
crates/agents/src/media/: multimodal.rs
crates/agents/src/memory/: backup.rs  embedding.rs  hybrid_search.rs  hybrid_search_sqlite.rs  local.rs  markdown_search.rs  markdown_storage.rs  memory_flush.rs  memory_flush_llm.rs  mod.rs  search.rs  sync.rs
crates/agents/src/models/: mod.rs  router.rs
crates/agents/src/planning/: decomposer.rs  engine.rs  executor.rs  mod.rs  plan.rs  replanner.rs  storage.rs
crates/agents/src/queue/: dag_scheduler.rs  dead_letter.rs  manager.rs  mod.rs  worker_tasks.rs
crates/agents/src/runtime/: agent_runtime_impl.rs  executor.rs  mod.rs  react_framework.rs  session_pool.rs  state_machine.rs
crates/agents/src/security/: mod.rs  session_isolation.rs
crates/agents/src/service_mesh/: registry.rs
crates/agents/src/services/: agent_channel_service.rs  agent_channel_store.rs  agent_channel_store_sqlite.rs  credential_crypto.rs  user_channel_service.rs  user_channel_store.rs  user_channel_store_sqlite.rs
crates/agents/src/session/: mod.rs  session_persistence.rs  unified_session.rs
crates/agents/src/skills/: builtin_loader.rs  code_executor.rs  command_handler.rs  discovery.rs  dynamic.rs  executor.rs  hub.rs  instance_manager.rs  knowledge_executor.rs  link_handler.rs  loader.rs  lockfile.rs  mod.rs  process_sandbox.rs  rating.rs  react_executor.rs  registry.rs  security.rs  skill_prompt.rs  tool_set.rs
crates/agents/src/state_manager/: mod.rs  persistence.rs
crates/agents/src/testing/: mocks.rs  mod.rs
crates/agents/src/tools/: exec.rs  mod.rs  process.rs  read_file.rs  search_files.rs  web_fetch.rs  write_file.rs
crates/agents/src/wallet/: mod.rs
crates/agents/src/workflow/: dag_bridge.rs  definition.rs  engine.rs  mod.rs  state.rs  template.rs  tests.rs  trigger.rs
crates/agents/tests/: channel_store_integration.rs  instance_manager_test.rs  planning_integration_tests.rs  skill_lifecycle_test.rs  skill_rating_test.rs  skill_react_integration.rs  skill_security_test.rs  skills_integration.rs  workflow_integration.rs
crates/p2p/: Cargo.toml
(+388 files in other folders)
