[workspace]
members = [
    # Core crates
    "crates/core",
    "crates/kernel",
    "crates/brain",
    "crates/agents",
    "crates/chain",
    "crates/crypto",
    "crates/p2p",
    "crates/sdk",
    "crates/telemetry",
    "crates/gateway-lib",
    "crates/message-bus",
    # Applications
    "apps/gateway",
    "apps/web",
    "apps/cli",
    "apps/beehub",
]

resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["BeeBotOS Contributors <team@beebotos.dev>"]
repository = "https://github.com/beebotos/beebotos"
homepage = "https://beebotos.dev"
documentation = "https://docs.beebotos.dev"
keywords = ["agent", "ai", "blockchain", "dao", "wasm"]
categories = ["wasm", "cryptography", "network-programming"]
rust-version = "1.75"

[workspace.dependencies]
# Security patches for transitive dependencies
jsonwebtoken = "9.3"
rcgen = "0.13"

# Windows compatibility fixes
cap-primitives = "3.4.5"
cap-std = "3.4.5"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Blockchain

alloy = { version = "0.1", features = ["full"] }

# Database
sled = "0.34"
sea-orm = "1.0"
redis = "0.24"

# Web3/ libp2p
libp2p = { version = "0.56", features = ["full"] }

# WASM
wasmtime = "34.0"
wasmtime-wasi = "34.0"
wasmer = "4.2"

# Crypto
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
sha3 = "0.10"
blake3 = "1.5"
aws-lc-rs = "1.0"

# ML/AI
ndarray = "0.15"
linfa = "0.7"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
getrandom = "=0.2.17"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
hex = { version = "0.4.3", features = ["alloc", "serde"] }

# Authentication
bcrypt = "0.15"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }
multihash = "0.19.3"

# Observability
tracing-opentelemetry = "0.25"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic", "metrics"] }
prometheus = "0.13"
axum-prometheus = "0.7"

# Testing
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
proptest = "1.4"
tempfile = "=3.14.0"

# Internal crates
beebotos-core = { path = "crates/core" }
beebotos-kernel = { path = "crates/kernel" }
beebotos-brain = { path = "crates/brain" }
beebotos-agents = { path = "crates/agents" }
beebotos-chain = { path = "crates/chain" }
beebotos-crypto = { path = "crates/crypto" }
beebotos-sdk = { path = "crates/sdk" }
beebotos-p2p = { path = "crates/p2p" }
beebotos-telemetry = { path = "crates/telemetry" }
beebotos-gateway-lib = { path = "crates/gateway-lib" }
beebotos-message-bus = { path = "crates/message-bus" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
inherits = "release"
debug = false

[patch.crates-io]
core2 = { git = "https://github.com/tianbaoluo/core2.git", branch = "fix-yank" }

