[package]
name = "beebotos-gateway"
version = "1.0.0"
edition = "2021"
description = "API Gateway for BeeBotOS"
license = "MIT"

[[bin]]
name = "beebotos-gateway"
path = "src/main.rs"

[dependencies]
# Internal crates
beebotos-core = { workspace = true }
beebotos-kernel = { workspace = true }
beebotos-agents = { workspace = true }
beebotos-chain = { workspace = true }
beebotos-crypto = { workspace = true }
beebotos-message-bus = { workspace = true, features = ["memory"] }
beebotos-telemetry = { workspace = true, features = ["metrics"] }

# Use gateway-lib for infrastructure
gateway = { package = "beebotos-gateway-lib", path = "../../crates/gateway-lib" }

# HTTP/Web Framework
axum = { workspace = true, features = ["ws", "http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-full", "timeout", "limit"] }

# Async Runtime
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono", "uuid", "macros"], default-features = false }

# Configuration - using gateway-lib's config
dotenvy = "0.15"
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4"

# Authentication & Security - using gateway-lib's auth
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
constant_time_eq = "0.3"

# Alloy for transaction signing
alloy-primitives = "0.8"
alloy-consensus = "0.8"
alloy-eips = "0.8"
alloy-rlp = "0.3"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-sol-types = "0.8"
alloy = { version = "0.8", features = ["full"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.25"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic", "metrics"] }
prometheus = "0.13"
axum-prometheus = "0.7"

# HTTP Client (for health checks and hub requests)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Utilities
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha1 = "0.10"
urlencoding = "2.1"
once_cell = "1.19"
lazy_static = "1.5"
serde_yaml = "0.9"
zip = "2.2"
dirs = "5.0"
toml = "0.8"
base64 = "0.22"

# Interactive CLI
rpassword = "7.3"
colored = "2.1"
regex = "1.10"
atty = "0.2"

# Note: dashmap and async-trait are provided by gateway-lib
# Re-exported through gateway:: for use in this crate

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tower-test = "0.4"
hyper = { version = "1.0", features = ["full"] }
mockall = "0.12"

# OBS-001: Integration testing dependencies
# For integration tests
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }

# OBS-004: Benchmarking dependencies
criterion = { version = "0.5", features = ["async_tokio"] }
md5 = "0.7"

# Testing utilities
tempfile = "3"

[[bench]]
name = "gateway_benchmarks"
harness = false
