[package]
name = "beebotos-agents"
version = "1.0.0"
edition = "2021"
authors = ["BeeBotOS Team"]
description = "BeeBotOS Agents - Runtime and A2A protocol"
license = "MIT"
repository = "https://github.com/beebotos/beebotos"

[dependencies]
beebotos-core = { path = "../core" }
beebotos-gateway-lib = { path = "../gateway-lib" }
beebotos-kernel = { path = "../kernel", features = ["wasm"] }

# Note: WASM execution is provided by beebotos-kernel's wasm module
# Do not add wasmtime directly - use kernel::wasm interfaces instead
beebotos-chain = { path = "../chain", default-features = false }

# 🟢 P1 FIX: Message Bus integration
beebotos-message-bus = { path = "../message-bus", features = ["memory"] }
alloy-consensus = "0.8"
alloy-rlp = "0.3"
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-signer = "0.8"
alloy-network = "0.8"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
p256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
urlencoding = "2.1"
blake3 = "1.5"
cron = "0.12"
regex = "1.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
feishu-sdk = { version = "0.1", features = ["websocket"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
bytes = "1.5"
base64 = "0.22"
futures = "0.3"
futures-util = "0.3"
aes-gcm = "0.10"
serde_repr = "0.1"
url = "2.5"
once_cell = "1.19"
tempfile = "3.10"
prost = "0.12"
parking_lot = "0.12"

# Database (SQLite)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "json", "uuid", "migrate"] }

# Additional dependencies for memory and security modules
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
lru = "0.12"
dirs = "5.0"
hkdf = "0.12"

# 🟢 P0 FIX: DAG scheduling dependencies
petgraph = "0.6"
thread_local = "1.1"
# WASM parsing for security validation
wasmparser = "0.246"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["wasm-runtime"]
wasm-runtime = []
a2a-server = []
examples = []
sqlite = []
