[package]
name = "beebotos-p2p"
version = "1.0.0"
edition = "2021"
description = "Peer-to-peer networking for BeeBotOS"
license = "MIT"

[dependencies]
beebotos-core = { path = "../core" }
tokio = { version = "1.36", features = ["full"] }
libp2p = { version = "0.56", features = [
    "tcp",
    "tls",
    "dns",
    "websocket",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "quic",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
multihash = { workspace = true }
log = "0.4"
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
